<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/menu_movie"
            android:icon="@drawable/ic_movie_black_24dp"
            android:title="@string/movie_bnav"/>
    <item
            android:id="@+id/menu_tv"
            android:icon="@drawable/ic_live_tv_black_24dp"
            android:title="@string/tv_show_bnav"
    />
    <item
            android:id="@+id/menu_fav"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/fav_bnav"
    />
    <item
            android:id="@+id/menu_serch"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/search_bnav"
    />
    <item
            android:id="@+id/menu_reminder"
            android:icon="@drawable/ic_access_time_black_24dp"
            android:title="@string/reminder_bnav"/>
</menu>