<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".remider.ReminderFragment">

    <TextView
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_reminder_txt"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:id="@+id/textView"/>

    <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/release_reminder_note"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintEnd_toStartOf="@+id/srreminder"
            android:layout_marginEnd="16dp"
            android:id="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="4dp"/>

    <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/srreminder"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/textView"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"/>

    <TextView
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daily_reminder_txt"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:id="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:layout_marginTop="16dp"/>

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/daily_reminder_note"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintEnd_toStartOf="@+id/sdreminder"
            android:layout_marginEnd="16dp"
            android:id="@+id/textView5"
            android:layout_marginTop="4dp"/>

    <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sdreminder"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/textView4"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"/>

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            tools:layout_editor_absoluteX="55dp"
            android:id="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/todo"/>

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            tools:layout_editor_absoluteX="55dp"
            android:id="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/todo"/>

</android.support.constraint.ConstraintLayout>