<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="match_parent"
        android:layout_width="match_parent">


    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".DetailActivity">

        <TextView
                android:fontFamily="@font/fontfam_montserrat_medium"
                android:id="@+id/tv_ov"
                android:textSize="16sp"
                tools:text="blablabla"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/tv_ovtxt"
                app:layout_constraintTop_toBottomOf="@+id/tv_ovtxt"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:paddingBottom="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginBottom="32dp"/>

        <TextView
                android:fontFamily="@font/montserrat_light"
                android:id="@+id/tv_ovtxt"
                android:textSize="12sp"
                android:text="@string/overview_str"
                android:layout_width="wrap_content"
                android:maxLines="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_release"
                app:layout_constraintStart_toStartOf="parent"/>

        <TextView
                android:fontFamily="@font/fontfam_montserrat_bold"
                android:id="@+id/tv_release"
                android:textSize="16sp"
                android:text="@string/empty"
                android:layout_width="wrap_content"
                android:maxLines="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_releasetxt"
                app:layout_constraintEnd_toEndOf="@+id/tv_releasetxt"
                app:layout_constraintStart_toStartOf="@+id/tv_releasetxt"/>

        <TextView
                android:fontFamily="@font/montserrat_light"
                android:id="@+id/tv_langtxt"
                android:textSize="12sp"
                android:text="@string/language"
                android:layout_width="wrap_content"
                android:maxLines="1"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/tv_releasetxt"
                android:layout_marginEnd="80dp"
                app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
                android:fontFamily="@font/montserrat_light"
                android:id="@+id/tv_releasetxt"
                android:textSize="12sp"
                android:text="@string/release_str"
                android:layout_width="wrap_content"
                android:maxLines="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar"
                android:layout_marginTop="24dp"/>

        <com.makeramen.roundedimageview.RoundedImageView
                android:scaleType="centerCrop"
                android:id="@+id/iv_poster"
                app:riv_mutate_background="true"
                app:riv_corner_radius_bottom_right="64dp"
                android:layout_width="0dp"
                android:layout_height="464dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView android:layout_width="30dp"
                   android:layout_height="30dp"
                   android:src="@drawable/favorite_false"
                   android:id="@+id/btn_fav"
                   app:layout_constraintEnd_toEndOf="@+id/iv_poster"
                   android:layout_marginEnd="8dp"
                   app:layout_constraintTop_toTopOf="@+id/tv_title"
                   android:contentDescription="@string/todo"/>

        <ImageView
                android:id="@+id/loading_image"
                android:layout_width="64dp"
                android:layout_height="64dp"
                app:layout_constraintEnd_toEndOf="@+id/iv_poster"
                app:layout_constraintStart_toStartOf="@+id/iv_poster"
                app:layout_constraintBottom_toBottomOf="@+id/iv_poster"
                app:layout_constraintTop_toTopOf="@+id/iv_poster"
                android:contentDescription="@string/todo"/>

        <TextView android:fontFamily="@font/fontfam_montserrat_bold"
                  android:id="@+id/tv_title"
                  android:text="@string/empty"
                  android:textSize="20sp"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="32dp"
                  app:layout_constraintTop_toBottomOf="@+id/iv_poster"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginTop="32dp"
                  android:layout_marginEnd="16dp"
                  app:layout_constraintEnd_toStartOf="@+id/btn_fav"/>

        <RatingBar
                style="?attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rating="4.5"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_title"
                app:layout_constraintStart_toStartOf="@+id/tv_title"
                android:id="@+id/ratingBar"/>

        <TextView
                android:id="@+id/item_st_numb"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="7.5"
                android:textSize="12sp"
                android:gravity="center_vertical"
                app:layout_constraintTop_toTopOf="@+id/ratingBar"
                app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
                app:layout_constraintStart_toEndOf="@+id/ratingBar"
                android:layout_marginStart="8dp"/>

        <TextView
                android:fontFamily="@font/fontfam_montserrat_bold"
                android:id="@+id/tv_lang"
                android:textSize="16sp"
                android:text="@string/empty"
                android:layout_width="wrap_content"
                android:maxLines="1"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_langtxt"
                app:layout_constraintEnd_toEndOf="@+id/tv_langtxt"
                app:layout_constraintStart_toStartOf="@+id/tv_langtxt"
                android:layout_marginTop="8dp"
        />


    </android.support.constraint.ConstraintLayout>

</ScrollView>